# qcel-howmany

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  PYTHON-API.md  README.md  out  pyproject.toml  rules_view.typ  test.py
.github/workflows/: CI.yml  cargo-doc.yml  publish.yml
cargo-flamegraph.trace/: form.template
cargo-flamegraph.trace/Trace1.run/: RunIssues.storedata
cargo-flamegraph.trace/corespace/run1/core/core-config/: exposedTableInfo.plist
cargo-flamegraph.trace/corespace/run1/core/stores/indexed-store-0/: bulkstore
cargo-flamegraph.trace/corespace/run1/core/stores/indexed-store-10/: bulkstore  bulkstore_descriptor  spindex.0
cargo-flamegraph.trace/corespace/run1/core/stores/indexed-store-15/: bulkstore  bulkstore_descriptor  spindex.0
cargo-flamegraph.trace/corespace/run1/core/stores/indexed-store-17/: bulkstore  spindex.0
cargo-flamegraph.trace/corespace/run1/core/stores/indexed-store-18/: bulkstore  bulkstore_descriptor  spindex.0
cargo-flamegraph.trace/corespace/run1/core/stores/indexed-store-22/: bulkstore  bulkstore_descriptor  spindex.0
cargo-flamegraph.trace/corespace/run1/core/stores/indexed-store-24/: bulkstore  bulkstore_descriptor  spindex.0
cargo-flamegraph.trace/corespace/run1/core/stores/indexed-store-25/: bulkstore  spindex.0
cargo-flamegraph.trace/corespace/run1/core/stores/indexed-store-26/: bulkstore  spindex.0
cargo-flamegraph.trace/corespace/run1/core/stores/indexed-store-28/: bulkstore  bulkstore_descriptor  spindex.0
cargo-flamegraph.trace/corespace/run1/core/stores/indexed-store-34/: bulkstore  spindex.0
cargo-flamegraph.trace/corespace/run1/core/stores/indexed-store-36/: bulkstore  spindex.0
cargo-flamegraph.trace/corespace/run1/core/stores/indexed-store-6/: bulkstore  spindex.0
cargo-flamegraph.trace/corespace/run1/core/stores/indexed-store-9/: spindex.0
cargo-flamegraph.trace/corespace/run1/core/table-manager/: tables.plist
cargo-flamegraph.trace/corespace/run1/core/uniquing/: strings
cargo-flamegraph.trace/corespace/run1/core/uniquing/arrayUniquer/: integeruniquer.data  integeruniquer.index
cargo-flamegraph.trace/corespace/run1/core/uniquing/typedArrayUniquer/: integeruniquer.data
cargo-flamegraph.trace/symbols/stores/: 19F23DF9-B4A5-3BE3-8777-5C8F0C5A43C8.symbolsarchive  1FB5ADB0-059E-3369-9C63-ABDE93E91499.symbolsarchive  29032F4F-59D7-3264-A9DD-9855D63C4B06.symbolsarchive  2F3A4185-6038-37D0-A02B-EC620BCD977B.symbolsarchive  3771EA6A-0FE5-3B63-961D-C09E01D5E680.symbolsarchive  3E72DE1D-C81A-3C8B-9C06-5B1E3186DE47.symbolsarchive  8807C502-A6D5-328B-ACFB-126DDD38FC16.symbolsarchive  A709554B-250F-3213-B4DD-6708DD83F622.symbolsarchive  AFDD330F-D89C-3AA5-85AB-E4568289A15C.symbolsarchive  CCC1B8A5-9BCF-304F-8DBB-AF2D0E89A151.symbolsarchive  DAB10AA4-8AFA-3D02-9CDE-6023554AC858.symbolsarchive  DE35B5EE-5872-3E5A-A1F0-EB18C5B0434C.symbolsarchive  DEFE3C5C-C279-3931-9107-D8B0E10AC694.symbolsarchive
python/qcel_howmany/: __init__.py  qcel_howmany.pyi
python/quclif/: __init__.py  quclif.pyi
python/tests/: test_all.py
quartz/: Classic_5_3_complete_ECC_set.json  Clifford_5_3_complete_ECC_set.json  Clifford_T_5_3_complete_ECC_set.json
scripts/: build_prover.py  cache.py  ecc_gen.py  find_idset.py  gate_set.py  generate_eccs.py  print_table.py  prove.py  prove_quartz.py  run_all.py  run_floatpoints.py  run_once.py  view.py  view_circs.py  view_proof.py  view_rules.py
src/: defs.rs  lib.rs  qreal_f128.rs  qreal_f64.rs  qreal_fixed64.rs
src/circ/: gate.rs  mod.rs  qargs.rs
src/circ/gate/: gates.rs
src/circ/param/: expr.pest  mod.rs
src/groups/: mod.rs  permutation.rs
src/identity/: circuit.rs  eccproof.rs  eccprove.rs  idcircuit.rs  idset.rs  mod.rs
src/identity/eccprove/: proof.rs
src/search/: double_perm_search.rs  mod.rs  quartz.rs
src/state/: gates.rs  indices.rs  mod.rs  order_info.rs
src/utils/: mod.rs
