[package]
name = "quclif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "quclif"
crate-type = ["cdylib", "rlib"]

[dependencies]
alias-ptr = "0.1.0"
derive_more = { version = "2.0.1", features = ["deref", "debug", "display", "index", "deref_mut", "from", "into"] }
dyn-clone = "1.0.19"
dyn-eq = "0.1.3"
either = "1.15.0"
extension-traits = "2.0.0"
fmttools = "0.2.2"
itertools = "0.14.0"
lazy_static = "1.5.0"
linear-map = "1.2.0"
nalgebra = "0.33.2"
nohash-hasher = "0.2.0"
num-complex = "0.4.6"
num-rational = "0.4.2"
num-traits = "0.2.19"
numpy = { version = "0.25.0", features = ["nalgebra"] }
pest = "2.8.1"
pest_derive = "2.8.1"
pyo3 = { version = "0.25.0", features = ["either", "num-complex"] }
pyo3-stub-gen = "0.11.1"
rand = "0.9.1"
serde_json = "1.0.141"
smallvec = { version = "1.15.1", features = ["union"] }
thiserror = "2.0.12"

[dev-dependencies]
claim = "0.5.0"

[profile.release]
debug = true
