[package]
name = "qcel_howmany"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qcel_howmany"
crate-type = ["cdylib", "rlib"]

[dependencies]
alias-ptr = "0.1.0"
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
derive_more = { version = "2.0.1", features = ["deref", "debug", "display", "index", "deref_mut", "from", "into"] }
dyn-clone = "1.0.19"
dyn-eq = "0.1.3"
either = "1.15.0"
extension-traits = "2.0.0"
fmttools = "0.2.2"
indicatif = "0.18.1"
itertools = "0.14.0"
linear-map = "1.2.0"
nalgebra = { version = "0.33.2", features = ["serde"] }
nohash-hasher = "0.2.0"
num-complex = { version = "0.4.6", features = ["serde"] }
num-rational = "0.4.2"
num-traits = "0.2.19"
numpy = { version = "0.26.0", features = ["nalgebra"] }
permutohedron = "0.2.4"
pest = "2.8.1"
pest_derive = "2.8.1"
portgraph = "0.8.0"
portmatching = "0.3.3"
postcard = { version = "1.1.3", features = ["use-std"] }
pyo3 = { version = "0.26.0", features = ["either", "num-complex"] }
pyo3-stub-gen = "0.15.0"
pythonize = "0.26.0"
rand = "0.9.1"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.141"
smallvec = { version = "1.15.1", features = ["serde", "union"] }
sorted-vec2 = "0.1.0"
spin = "0.10.0"
thiserror = "2.0.12"

[dev-dependencies]
claim = "0.5.0"

[profile.release]
debug = true

[features]
default = []
f128 = []
