[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "qcel_howmany"
requires-python = ">=3.8"
description = "Rust-accelerated tool for quantum circuit identity generation and proving (CAV 2026 artifact)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Yuantian Ding", email = "work.yt.ding@gmail.com" },
]
keywords = ["quantum", "circuit", "optimization", "identity", "ECC"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
dynamic = ["version"]
dependencies = [
    "click>=8.1.8",
    "qiskit>=1.2.4",
]

[project.urls]
Homepage = "https://github.com/YuantianDing/qcel-howmany"
Repository = "https://github.com/YuantianDing/qcel-howmany"
Documentation = "https://yuantianding.github.io/qcel-howmany/"
"Bug Tracker" = "https://github.com/YuantianDing/qcel-howmany/issues"

[project.optional-dependencies]
tests = [
    "pytest",
]
[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "pandas>=2.0.3",
    "pillow>=10.4.0",
    "pylatexenc>=2.10",
    "tables>=3.8.0",
    "tqdm>=4.67.1",
]
